--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <hr noshade>
   <h3>Education Qualification</h3>
   <ul>
-    <li><strong>High School:</strong> Nalanda Degree College</li>
-    <li><strong>School:</strong> Sarada Junior College</li>
+    <li><strong>School:</strong> Nalanda Degree College</li>
+    <li><strong>High School:</strong> Sarada Junior College</li>
+    <li><strong>School:</strong>Sri Chaitanya Techno School</li>
   </ul>
   <hr>
   <h3>Carrer</h3>
